# chatbot-llm-observability

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
ingestion/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
ingestion/alembic/: env.py
ingestion/alembic/versions/: 20260522_drop_messages_content_redacted.py
ingestion/app/: config.py  database.py  main.py  migrate_ollama_tokens.py  models.py  schemas.py  seed.py  tasks.py  worker.py
ingestion/app/routers/: health.py  ingest.py  logs.py  metrics.py  stream.py
sdk/: README.md  pyproject.toml
sdk/llm_obs/: __init__.py  client.py  discovery.py  guard.py  span.py  streaming.py
sdk/llm_obs/pii/: __init__.py  patterns.py  redact.py
sdk/llm_obs/providers/: __init__.py  anthropic.py  gemini.py  openai.py
web/: Dockerfile  requirements.txt
web/app/: cancel_registry.py  config.py  database.py  main.py  messages.py  models.py
web/app/llm/: __init__.py  factory.py
web/app/routers/: chat.py  conversations.py  dashboard.py
web/app/templates/: base.html  chat.html  dashboard.html  logs.html
