[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-obs"
version = "0.1.0"
description = "Lightweight SDK for LLM inference logging"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
openai    = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
gemini    = ["google-generativeai>=0.7"]
all       = ["openai>=1.30", "anthropic>=0.30", "google-generativeai>=0.7"]

[tool.setuptools.packages.find]
where = [""]
include = ["llm_obs*"]
